[gd_scene load_steps=4 format=3 uid="uid://c3hj4wxy5q8bg"]

[ext_resource type="Script" path="res://scenes/factory_interior/factory_interior.gd" id="1"]
[ext_resource type="Script" path="res://scenes/factory_interior/factory_interior_grid_renderer.gd" id="2"]
[ext_resource type="Script" path="res://scenes/factory_interior/factory_interior_ui.gd" id="3"]

[node name="FactoryInterior" type="Node2D"]
script = ExtResource("1")

[node name="GridRenderer" type="Node2D" parent="."]
script = ExtResource("2")

[node name="MachinesContainer" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("3")

[node name="BackButton" type="Button" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 60.0
text = "‚Üê Back"

[node name="ConnectButton" type="Button" parent="UI"]
offset_left = 130.0
offset_top = 20.0
offset_right = 280.0
offset_bottom = 60.0
text = "Connect Machines"

[node name="FactoryLabel" type="Label" parent="UI"]
offset_left = 300.0
offset_top = 20.0
offset_right = 560.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 24
text = "Factory Interior"

[node name="BottomBar" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="UI/BottomBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/BottomBar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="UI/BottomBar/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "MACHINE BUILD MENU"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/BottomBar/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="UI/BottomBar/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 3
vertical_scroll_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/BottomBar/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[connection signal="back_button_pressed" from="UI" to="." method="_on_back_button_pressed"]
[connection signal="connect_button_pressed" from="UI" to="." method="_on_connect_button_pressed"]
[connection signal="machine_button_pressed" from="UI" to="." method="_on_machine_button_pressed"]
